# WindowsLeagueAutoplay

./: README.md
Test DLL/: CMakeLists.txt  Test DLL.sln
Test DLL/Test DLL/: AFKManager.cpp  AFKManager.h  AutoQueueManager.cpp  AutoQueueManager.h  ContinueManager.cpp  ContinueManager.h  DetectionData.h  Source.cpp  StoppedWorkingManager.cpp  StoppedWorkingManager.h  Test DLL.vcxproj  Test DLL.vcxproj.filters  Utility.h
Test DLL/Test DLL/Detection/: DetectionManager.cpp  DetectionManager.h
Test DLL/Test DLL/Detection/Ability Manager/: AbilityManager.h
Test DLL/Test DLL/Detection/Allies/: AllyChampionManager.cpp  AllyChampionManager.h  AllyMinionManager.cpp  AllyMinionManager.h  SelfChampionManager.cpp  SelfChampionManager.h
Test DLL/Test DLL/Detection/Enemies/: EnemyChampionManager.cpp  EnemyChampionManager.h  EnemyMinionManager.cpp  EnemyMinionManager.h  EnemyTowerManager.cpp  EnemyTowerManager.h
Test DLL/Test DLL/Detection/Item Manager/: ItemManager.cpp  ItemManager.h
Test DLL/Test DLL/Detection/Map Manager/: MapManager.cpp  MapManager.h
Test DLL/Test DLL/Detection/Objects/: Champion.cpp  Champion.h  GenericObject.cpp  GenericObject.h  Minion.cpp  Minion.h  Position.h  SelfHealth.cpp  SelfHealth.h  Tower.cpp  Tower.h
Test DLL/Test DLL/Detection/Shop Manager/: ShopManager.cpp
Test DLL/Test DLL/Detection/Surrender Manager/: SurrenderManager.cpp  SurrenderManager.h
Test DLL/cmakeBuild/: CMakeCache.txt  Makefile  cmake_install.cmake
Test DLL/source/: Source.cpp  Utility.h
Test DLL/source/Detection/Ability Manager/: AbilityManager.cpp  AbilityManager.h
Test DLL/source/Detection/Allies/: SelfChampionManager.h
Test DLL/source/Detection/Enemies/: EnemyChampionManager.cpp  (+2 more)
(+93 files in other folders)
